# daily-arXiv-digest

./: .gitignore  LICENSE  README.md  pyproject.toml  seen_ids.txt  template.md  update_readme.py
ai/: config.py  main.py  pipeline.py  prompts.py  structure.py  system.txt  template.txt
contents/: 2025-04-26.md  2025-04-28.md  2025-04-29.md  2025-04-30.md  2025-05-01.md  2025-05-02.md  2025-05-05.md  2025-05-06.md  2025-05-07.md  2025-05-08.md  2025-05-09.md  2025-05-12.md  2025-05-13.md  2025-05-14.md  2025-05-15.md  2025-05-19.md  2025-05-20.md  2025-05-21.md  2025-05-22.md  2025-05-23.md  2025-05-26.md  2025-05-27.md  2025-05-28.md  2025-05-29.md  2025-06-02.md  2025-06-03.md  2025-06-04.md  2025-06-05.md  2025-06-06.md  2025-06-09.md  2025-06-11.md  2025-06-12.md  2025-06-13.md  2025-06-16.md  2025-06-17.md  2025-06-18.md  2025-06-19.md  2025-06-20.md  2025-06-23.md  2025-06-24.md  (+58 more)
daily_arxiv/: config.yaml  scrapy.cfg
data/: 2025-04-24.jsonl  2025-04-24.md  2025-04-24_AI_enhanced.jsonl  2025-04-25.jsonl  2025-04-25.md  2025-04-25_AI_enhanced.jsonl  2025-04-26.jsonl  2025-04-26.md  2025-04-26_AI_enhanced.jsonl  2025-04-28.jsonl  2025-04-28_AI_enhanced.jsonl  2025-04-29.jsonl  2025-04-29_AI_enhanced.jsonl  2025-04-30.jsonl  2025-04-30_AI_enhanced.jsonl  2025-05-01.jsonl  2025-05-01_AI_enhanced.jsonl  2025-05-02.jsonl  2025-05-02_AI_enhanced.jsonl  2025-05-05.jsonl  2025-05-05_AI_enhanced.jsonl  2025-05-06.jsonl  2025-05-06_AI_enhanced.jsonl  2025-05-07.jsonl  2025-05-07_AI_enhanced.jsonl  2025-05-08.jsonl  2025-05-08_AI_enhanced.jsonl  2025-05-09.jsonl  (+174 more)
(+5 files in other folders)
