[project]
name = "daily-arxiv-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "pymupdf4llm>=0.0.21",
    "scrapy>=2.12.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
    "types-tqdm>=4.67.0.20250417",
]
